feat: 채팅 앱 캐시 및 보안 정책 적용
